Resolved Alignment Issue + Header Hover Colours & Underline

--- a/src/css/_app.css
+++ b/src/css/_app.css
@@ -1,7 +1,3 @@
-body {
-  @apply pt-14 xl:pl-60;
-}
-
 #app {
   @apply w-screen transition-position lg:w-auto;
 }
